[package]
name = "freeciv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
bitflags = "2"
fastrand = "1.9"
fixedbitset = "0.4"
image = { version = "0.24", default-features = false, features = ["png"] }
noise = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
